Export com.ibm.lang.management.internal to access metrics